fix: content overflowing

--- a/src/app/root-layout/RootLayout.module.scss
+++ b/src/app/root-layout/RootLayout.module.scss
@@ -6,7 +6,7 @@
 }
 
 .Content {
-  @apply flex flex-1;
+  @apply flex flex-1 min-h-0;
 }
 
 .Left {
